<resources>
    <string name="app_name">BIN_Info</string>
    <string name="about_user">User information</string>
    <string name="user_history">User response history</string>
    <string name="hint">Enter the first digits of a card number (BIN/IIN)</string>
    <string name="get_info">Get information</string>
    <string name="show_history">Show history</string>
    <string name="scheme">Scheme/network</string>
    <string name="brand">Brand</string>
    <string name="card_number">Card number</string>
    <string name="length">Length</string>
    <string name="luhn">luhn</string>
    <string name="type">Type</string>
    <string name="prepaid">Prepaid</string>
    <string name="country">Country</string>
    <string name="latitude">(latitude:</string>
    <string name="longitude">, longitude:</string>
    <string name="longitude_end">)</string>
    <string name="bank">Bank</string>
    <string name="bank_url">www.jyskebank.dk</string>
    <string name="bank_phone_number">+4589893300</string>
    <string name="bin_number">BIN number:</string>
    <string name="title">BIN/IIN:</string>
    <string name="subtitle">Subtitle</string>
    <string name="user_response_history">User response history:</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>